--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@types/react-loader": "^2.4.5",
     "animate.css": "^4.1.1",
     "gsap-trial": "^3.10.4",
     "loaders.css": "^0.1.2",
