--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@fortawesome/free-brands-svg-icons": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
+    "@types/react-leaflet": "^2.8.2",
     "@types/react-loader": "^2.4.5",
     "animate.css": "^4.1.1",
     "gsap-trial": "^3.10.4",
+    "leaflet": "^1.8.0",
     "loaders.css": "^0.1.2",
     "next": "12.1.5",
     "react": "18.0.0",
