--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "animate.css": "^4.1.1",
     "gsap-trial": "^3.10.4",
     "leaflet": "^1.8.0",
+    "leaflet-defaulticon-compatibility": "^0.1.1",
     "loaders.css": "^0.1.2",
     "next": "12.1.5",
     "react": "18.0.0",
