implement next-seo

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "leaflet-defaulticon-compatibility": "^0.1.1",
     "loaders.css": "^0.1.2",
     "next": "12.1.5",
+    "next-seo": "^5.5.0",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-leaflet": "^4.0.0",
