add new-lottie & react parallax mouse

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-leaflet": "^4.0.0",
     "react-loaders": "^3.0.1",
     "react-lottie": "^1.2.3",
+    "react-parallax-mouse": "^2.0.1",
     "sass": "^1.52.3"
   },
   "devDependencies": {
